update layout issues, as they relate to DocsBanner, update show/hide logic

--- a/packages/vuepress-theme-odyssey/styles/components/_DocsBanner.scss
+++ b/packages/vuepress-theme-odyssey/styles/components/_DocsBanner.scss
@@ -1,8 +1,12 @@
 .docs-banner {
-  display: flex;
+  display: none;
   padding: $spacing-s  $spacing-xs;
   background: cv('blue', '000');
   text-align: center;
+
+  &.is-docs-banner-visible {
+    display: flex;
+  }
 
   .docs-banner--content {
     flex: 1;
